[gd_scene load_steps=6 format=3 uid="uid://cta3neh2ats6o"]

[ext_resource type="Script" uid="uid://cb65sy8k6wuve" path="res://scenes/menus/start_menu/start_menu.gd" id="1_6cjlu"]
[ext_resource type="Theme" uid="uid://cd3xaq0w5mwtl" path="res://assets/themes/default.tres" id="1_cndl7"]
[ext_resource type="Theme" uid="uid://ba8x7si331c2" path="res://assets/themes/button_big.tres" id="3_5q43g"]
[ext_resource type="Texture2D" uid="uid://bgu8owvsv7jys" path="res://scenes/menus/start_menu/title screen.png" id="3_8pm6n"]
[ext_resource type="Theme" uid="uid://c4jh2a00mvosq" path="res://assets/themes/margin_container_of_buttons_nested.tres" id="5_f684d"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cndl7")
script = ExtResource("1_6cjlu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_8pm6n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.07578125
anchor_top = 0.39791667
anchor_right = 0.9242188
anchor_bottom = 0.9187502
metadata/_edit_use_anchors_ = true

[node name="SubTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Godot Wild Jam 88 Game Jam Entry"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ButtonStart" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_5q43g")
text = "Start Game"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_f684d")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ButtonSettings" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonCredits" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ButtonQuit" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/ButtonStart" to="." method="_on_button_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonCredits" to="." method="_on_button_credits_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
